Updated the backend and frontend for the categories fetching and productlist page where we can see the prodoucts from categories.